add getDriver screens (static)

--- a/app/src/main/res/layout/detail_ride_layout.xml
+++ b/app/src/main/res/layout/detail_ride_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.getdriver.GetDriverView">
+    tools:context=".view.getdriver.CreateRideView">
 
 
     <LinearLayout
@@ -114,7 +114,6 @@
 
         </LinearLayout>
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -139,15 +138,14 @@
 
             <TextView
                 android:id="@+id/price_label_color"
-                android:layout_width="125dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_offer_price_positive"
                 android:gravity="center"
-                android:paddingStart="20dp"
+                android:text="@string/recommendDownPrice"
+                android:textSize="14sp"
                 android:paddingTop="10dp"
-                android:paddingEnd="20dp"
                 android:paddingBottom="10dp"
-                android:textColor="@android:color/white"
+                android:textColor="#FF532E"
                 android:visibility="gone" />
 
         </LinearLayout>
@@ -193,7 +191,6 @@
                     android:paddingStart="5dp"
                     android:textColor="@android:color/black" />
 
-
             </LinearLayout>
 
             <TextView
@@ -214,37 +211,36 @@
 
 
             <LinearLayout
+                android:id="@+id/comment_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingEnd="15dp">
 
                 <TextView
-                    android:id="@+id/comment_btn"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="end"
                     android:fontFamily="@font/roboto"
                     android:gravity="end"
-                    android:paddingStart="18dp"
                     android:paddingTop="23dp"
-                    android:paddingEnd="15dp"
                     android:text="@string/comment"
                     android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/comment_min_text"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="end"
                     android:ellipsize="end"
                     android:fontFamily="@font/roboto"
                     android:gravity="end"
                     android:maxLines="1"
                     android:paddingStart="18dp"
-                    android:paddingEnd="15dp"
                     android:singleLine="true"
                     android:textColor="#60000000"
-                    android:textSize="12sp" />
-
+                    android:textSize="13sp" />
 
             </LinearLayout>
 
@@ -258,10 +254,10 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/bg_btn_blue"
+            android:background="@drawable/bg_btn_gray"
             android:fontFamily="@font/roboto"
             android:shadowColor="@color/colorBlue"
-            android:text="@string/getdriver"
+            android:text="@string/getDriver"
             android:textAllCaps="false"
             android:textSize="16sp" />
 
