--- a/app/src/main/res/layout/confirm_phone_fragment.xml
+++ b/app/src/main/res/layout/confirm_phone_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/back_btn"
+        android:background="@drawable/bg_back_btn"
         android:elevation="12dp"
         android:padding="13dp"
         android:src="@drawable/ic_back_arrow" />
