add driver timer (not until)

--- a/app/src/main/res/drawable/ic_call_phone_driver.xml
+++ b/app/src/main/res/drawable/ic_call_phone_driver.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="56dp"
-    android:height="56dp"
-    android:viewportWidth="56"
-    android:viewportHeight="56">
+    android:width="28dp"
+    android:height="28dp"
+    android:viewportWidth="26"
+    android:viewportHeight="25">
 
   <path
-        android:fillColor="#ffffff"
-        android:pathData="M19.2575 13.3838C18.2143 14.3447 16.8732 15.677 16.4425 16.5383C15.5194 18.3844 16.9041 23.4614 21.981 28.9998C26.0425 33.4306 31.058 35.3385 33.9811 35.6462C35.9061 35.8488 37.6976 33.9028 38.6966 32.5504C39.2224 31.8386 39.0975 30.8715 38.4821 30.2356L35.5793 27.2362C34.7348 26.3635 33.3153 26.4409 32.5096 27.3496C31.8676 28.0737 31.1675 28.7914 30.7503 29C29.25 29.7502 22.4426 22.5385 22.9041 21.1537C23.2725 20.6011 23.9349 19.9749 24.5981 19.422C25.5822 18.6014 25.7152 17.0824 24.7879 16.1979L21.8905 13.4342C21.1536 12.7313 20.0065 12.6938 19.2575 13.3838Z"
-        android:strokeWidth="2"
-        android:strokeColor="#000000" />
-    <path
-        android:pathData="M29.8271 16.0769C31.2118 16.0769 35.3656 17.9231 35.8272 22.0769"
-        android:strokeWidth="2"
-        android:strokeColor="#000000"
-        android:strokeLineCap="round" />
-    <path
-        android:pathData="M29.8271 11.4615C34.4425 11.4615 40.4425 17 40.4425 22.0769"
-        android:strokeWidth="2"
-        android:strokeColor="#000000"
-        android:strokeLineCap="round" />
+      android:fillColor="#ffffff"
+      android:strokeColor="#2A2A2A"
+      android:strokeWidth="2"
+      android:strokeLineJoin="round"
+      android:strokeLineCap="round"
+      android:pathData="M21 18.92V21.92C21.0011 22.1985 20.9441 22.4741 20.8325 22.7293C20.7209 22.9845 20.5573 23.2136 20.3521 23.4018C20.1468 23.5901 19.9046 23.7335 19.6407 23.8227C19.3769 23.9119 19.0974 23.945 18.82 23.92C15.7428 23.5856 12.787 22.5341 10.19 20.85C7.77382 19.3146 5.72533 17.2661 4.18999 14.85C2.49997 12.2412 1.44824 9.27097 1.11999 6.17997C1.095 5.90344 1.12787 5.62474 1.21649 5.3616C1.30512 5.09846 1.44756 4.85666 1.63476 4.6516C1.82196 4.44653 2.0498 4.28268 2.30379 4.1705C2.55777 4.05831 2.83233 4.00024 3.10999 3.99997H6.10999C6.5953 3.9952 7.06579 4.16705 7.43376 4.48351C7.80173 4.79996 8.04207 5.23942 8.10999 5.71997C8.23662 6.68004 8.47144 7.6227 8.80999 8.52997C8.94454 8.8879 8.97366 9.27689 8.8939 9.65086C8.81415 10.0248 8.62886 10.3681 8.35999 10.64L7.08999 11.91C8.51355 14.4135 10.5864 16.4864 13.09 17.91L14.36 16.64C14.6319 16.3711 14.9751 16.1858 15.3491 16.1061C15.7231 16.0263 16.1121 16.0554 16.47 16.19C17.3773 16.5285 18.3199 16.7634 19.28 16.89C19.7658 16.9585 20.2094 17.2032 20.5265 17.5775C20.8437 17.9518 21.0122 18.4296 21 18.92Z" />
+  <path
+      android:strokeColor="#2B2B2B"
+      android:strokeWidth="2"
+      android:strokeLineCap="round"
+      android:pathData="M13.8272 5.61536C15.2118 5.61536 19.3657 7.46151 19.8272 11.6154" />
+  <path
+      android:strokeColor="#2B2B2B"
+      android:strokeWidth="2"
+      android:strokeLineCap="round"
+      android:pathData="M13 2C17.6154 2 23.6154 7.53846 23.6154 12.6154" />
 </vector>
