--- a/app/src/main/res/layout/create_ride_layout.xml
+++ b/app/src/main/res/layout/create_ride_layout.xml
@@ -60,6 +60,8 @@
             android:layout_marginEnd="15dp"
             android:background="@drawable/bg_inputs_layout"
             android:elevation="10dp"
+            android:focusable="true"
+            android:clickable="true"
             android:orientation="horizontal"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
