--- a/app/src/main/res/layout/driver_info_layout.xml
+++ b/app/src/main/res/layout/driver_info_layout.xml
@@ -16,21 +16,43 @@
         android:orientation="vertical"
         android:paddingTop="20dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/status_driver"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:text="@string/driverInWay"
+                android:textAlignment="center"
+                android:textColor="@color/colorBlue"
+                android:textSize="22sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="#30000000" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
             android:weightSum="1">
 
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:layout_marginStart="15dp"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/img_driver"
@@ -42,8 +64,8 @@
                     android:id="@+id/driver_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Николай"
                     android:layout_marginTop="5dp"
+                    android:text="Николай"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="18sp" />
@@ -63,12 +85,13 @@
                     android:id="@+id/car_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="15dp"
                     android:background="@drawable/bg_car_number"
-                    android:paddingStart="9dp"
+                    android:paddingStart="13dp"
                     android:paddingTop="2dp"
-                    android:paddingEnd="9dp"
+                    android:paddingEnd="13dp"
                     android:paddingBottom="2dp"
-                    android:layout_marginTop="30dp"
                     android:text="HR34HERG"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
@@ -79,8 +102,9 @@
                     android:id="@+id/car_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Kia Rio"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="15dp"
+                    android:text="Kia Rio"
                     android:textColor="#70000000"
                     android:textSize="20sp" />
 
@@ -93,20 +117,22 @@
                         android:id="@+id/phone_call_driver"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginEnd="10dp"
                         android:background="@drawable/bg_back_btn"
-                        android:elevation="12dp"
-                        android:padding="13dp"
+                        android:elevation="7dp"
+                        android:padding="17dp"
                         android:src="@drawable/ic_call_phone_driver" />
 
                     <ImageButton
                         android:id="@+id/message_driver"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_margin="15dp"
                         android:background="@drawable/bg_back_btn"
-                        android:elevation="12dp"
-                        android:padding="13dp"
+                        android:elevation="7dp"
+                        android:padding="17dp"
                         android:src="@drawable/is_message_driver" />
                 </LinearLayout>
 
@@ -144,7 +170,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_corners_layout"
-            android:elevation="10dp"
             android:orientation="vertical"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
@@ -214,28 +239,109 @@
                 android:drawableEnd="@drawable/ic_arrow_right"
                 android:fontFamily="@font/roboto"
                 android:paddingTop="17dp"
-                android:paddingBottom="17dp"
+                android:paddingBottom="27dp"
                 android:text="Другая причина"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
 
-            <Button
-                android:id="@+id/reason_btn"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="17dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/bg_btn_black"
-                android:fontFamily="@font/roboto"
-                android:shadowColor="@color/colorBlue"
-                android:text="@string/getDriver"
-                android:textAllCaps="false"
-                android:textSize="16sp" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/confirm_cancel_bottom_sheet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_corners_layout"
+            android:elevation="10dp"
+            android:orientation="vertical"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            app:behavior_peekHeight="0dp"
+            app:layout_behavior=".view.getdriver.MBottomSheet">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_bottom_sheet_arrow" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="25dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/cancelRideQuestion"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="28sp" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:paddingBottom="20dp"
+                android:weightSum="1">
+
+                <TextView
+                    android:id="@+id/not_cancel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/bg_not_cancel_btn"
+                    android:fontFamily="@font/roboto"
+                    android:paddingStart="17dp"
+                    android:paddingTop="17dp"
+                    android:paddingEnd="17dp"
+                    android:paddingBottom="17dp"
+                    android:text="@string/notCancel"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+
+                <TextView
+                    android:id="@+id/cancel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/bg_cancel_btn"
+                    android:fontFamily="@font/roboto"
+                    android:paddingStart="33dp"
+                    android:paddingTop="17dp"
+                    android:paddingEnd="33dp"
+                    android:paddingBottom="17dp"
+                    android:text="@string/cancel"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
+        <View
+            android:id="@+id/on_view_cancel_reason"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0"
+            android:background="@android:color/black"
+            android:visibility="gone" />
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <View
+        android:id="@+id/on_map_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:background="@android:color/black"
+        android:visibility="gone" />
 
 </RelativeLayout>
