--- a/app/src/main/res/layout/driver_item.xml
+++ b/app/src/main/res/layout/driver_item.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="10dp"
     android:layout_marginStart="15dp"
+    android:layout_marginTop="12dp"
     android:layout_marginEnd="15dp"
-    android:layout_marginTop="12dp">
+    app:cardCornerRadius="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,14 +16,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="1">
-            <View
-                android:layout_width="0dp"
-                android:layout_height="6dp"
-                android:layout_weight="0.8"
-                android:background="@drawable/bg_line_driver" />
+            android:layout_height="wrap_content">
 
+            <View
+                android:id="@+id/timer_driver_offer"
+                android:layout_width="match_parent"
+                android:layout_height="6dp"
+                android:background="@drawable/bg_line_driver" />
         </LinearLayout>
 
 
@@ -110,13 +109,14 @@
                 android:layout_margin="10dp"
                 android:background="@drawable/bg_cross_btn"
                 android:elevation="12dp"
-                android:padding="13dp"
-                android:src="@drawable/ic_big_cross" />
+                android:padding="16dp"
+                android:src="@drawable/ic_big_cross"
+                android:translationZ="10dp" />
 
             <Button
                 android:id="@+id/accept_driver"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="45dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/bg_btn_blue"
