--- a/app/src/main/res/layout/get_driver_layout.xml
+++ b/app/src/main/res/layout/get_driver_layout.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/main_info_layout"
-        android:paddingTop="8dp"
         android:visibility="gone" />
 
     <LinearLayout
@@ -210,7 +209,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_corners_layout"
-            android:elevation="10dp"
             android:orientation="vertical"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
@@ -280,27 +278,99 @@
                 android:drawableEnd="@drawable/ic_arrow_right"
                 android:fontFamily="@font/roboto"
                 android:paddingTop="17dp"
-                android:paddingBottom="17dp"
+                android:paddingBottom="27dp"
                 android:text="Другая причина"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
 
-            <Button
-                android:id="@+id/reason_btn"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="17dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/bg_btn_black"
-                android:fontFamily="@font/roboto"
-                android:shadowColor="@color/colorBlue"
-                android:text="@string/ready"
-                android:textAllCaps="false"
-                android:textSize="16sp" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/confirm_cancel_bottom_sheet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_corners_layout"
+            android:elevation="10dp"
+            android:orientation="vertical"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            app:behavior_peekHeight="0dp"
+            app:layout_behavior=".view.getdriver.MBottomSheet">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_bottom_sheet_arrow" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="25dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/cancelRideQuestion"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="28sp" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:paddingBottom="20dp"
+                android:weightSum="1">
+
+                <TextView
+                    android:id="@+id/not_cancel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/bg_not_cancel_btn"
+                    android:fontFamily="@font/roboto"
+                    android:paddingStart="17dp"
+                    android:paddingTop="17dp"
+                    android:paddingEnd="17dp"
+                    android:paddingBottom="17dp"
+                    android:text="@string/notCancel"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+
+                <TextView
+                    android:id="@+id/cancel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/bg_cancel_btn"
+                    android:fontFamily="@font/roboto"
+                    android:paddingStart="33dp"
+                    android:paddingTop="17dp"
+                    android:paddingEnd="33dp"
+                    android:paddingBottom="17dp"
+                    android:text="@string/cancel"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
+
+        <View
+            android:id="@+id/on_view_cancel_reason"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0"
+            android:background="@android:color/black" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
