--- a/app/src/main/res/layout/driver_item.xml
+++ b/app/src/main/res/layout/driver_item.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="15dp"
-    android:layout_marginTop="12dp"
     android:layout_marginEnd="15dp"
+    android:layout_marginBottom="12dp"
     app:cardCornerRadius="10dp">
 
     <LinearLayout
