--- a/app/src/main/res/layout/offer_price_activity.xml
+++ b/app/src/main/res/layout/offer_price_activity.xml
@@ -56,11 +56,12 @@
                 android:textSize="40sp" />
 
             <TextView
+                android:id="@+id/average_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/roboto"
-                android:text="@string/offer_price_text"
+                android:text="@string/offer_price_average_price"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
