--- a/app/src/main/res/layout/get_driver_layout.xml
+++ b/app/src/main/res/layout/get_driver_layout.xml
@@ -242,7 +242,7 @@
                 android:fontFamily="@font/roboto"
                 android:paddingTop="17dp"
                 android:paddingBottom="17dp"
-                android:text="Долго ждать"
+                android:text="@string/reasonCancel1"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
@@ -254,7 +254,7 @@
                 android:fontFamily="@font/roboto"
                 android:paddingTop="17dp"
                 android:paddingBottom="17dp"
-                android:text="Я передумал"
+                android:text="@string/reasonCancel2"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
@@ -267,7 +267,7 @@
                 android:fontFamily="@font/roboto"
                 android:paddingTop="17dp"
                 android:paddingBottom="17dp"
-                android:text="Заказал по ошибке"
+                android:text="@string/reasonCancel3"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
@@ -280,7 +280,7 @@
                 android:fontFamily="@font/roboto"
                 android:paddingTop="17dp"
                 android:paddingBottom="27dp"
-                android:text="Другая причина"
+                android:text="@string/reasonCancel4"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
