--- a/app/src/main/res/layout/driver_info_layout.xml
+++ b/app/src/main/res/layout/driver_info_layout.xml
@@ -267,15 +267,15 @@
                 android:src="@drawable/ic_bottom_sheet_arrow" />
 
             <TextView
+                android:id="@+id/text_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="25dp"
                 android:fontFamily="@font/roboto"
-                android:text="@string/cancelRideQuestion"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="28sp" />
+                android:textSize="19sp" />
 
 
             <LinearLayout
