--- a/app/src/main/res/layout/profile_detail_activity.xml
+++ b/app/src/main/res/layout/profile_detail_activity.xml
@@ -67,6 +67,7 @@
                 android:src="@drawable/ic_user_profile" />
 
             <EditText
+                android:id="@+id/full_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -147,6 +148,7 @@
                 android:src="@drawable/ic_email_profile" />
 
             <EditText
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -184,13 +186,13 @@
         android:gravity="bottom">
 
         <TextView
-            android:padding="20dp"
             android:id="@+id/logout"
             android:layout_width="match_parent"
-            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
+            android:padding="20dp"
             android:text="@string/logout"
+            android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
